CSS headerMenu OK

--- a/src/app/components/header-menu/header-menu.component.html
+++ b/src/app/components/header-menu/header-menu.component.html
@@ -1,1 +1,8 @@
-<p>header-menu works!</p>
+<section>
+    <nav class="navbar">
+        <ul class="list__menu">
+            <li><a routerLink="/">Tirage au sort</a></li>
+            <li><a routerLink="/absence">Absent.e.s</a></li>
+        </ul>
+    </nav>
+</section>
