CONFECTION DU BOUTON DE LANCEMENT DE LA LOTERIE

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header-menu></app-header-menu>
+<app-loterie-button></app-loterie-button>
 <router-outlet></router-outlet>
 <app-footer-app></app-footer-app>
