--- a/src/app/components/loterie-button/loterie-button.component.css
+++ b/src/app/components/loterie-button/loterie-button.component.css
@@ -10,6 +10,10 @@ button {
     margin-top: 187px;
 }
 
+button:hover {
+    cursor: pointer;
+}
+
 .container {
     display: flex;
     justify-content: center;
