MODULE MESSAGE APPRENANT SELECTIONNE + CORRECTION MT DU BOUTON

--- a/src/app/components/display-selected-learner/display-selected-learner.component.html
+++ b/src/app/components/display-selected-learner/display-selected-learner.component.html
@@ -1,1 +1,6 @@
-<p>display-selected-learner works!</p>
+<section>
+    <div>
+        <p>Personne n'a été sélectionner actuellement</p>
+    </div>
+</section>
+
