CONFECTION DU ROUTING POUR LE TIREGA AU SORT + LISTE DES ABSENT.E.S

--- a/src/app/pages/lottery/lottery.component.html
+++ b/src/app/pages/lottery/lottery.component.html
@@ -1,1 +1,4 @@
-<p>lottery works!</p>
+<section>
+    <app-loterie-button></app-loterie-button>
+    <app-display-selected-learner></app-display-selected-learner>
+</section>
