--- a/src/app/components/absence-selection-list/absence-selection-list.component.html
+++ b/src/app/components/absence-selection-list/absence-selection-list.component.html
@@ -1,1 +1,27 @@
-<p>absence-selection-list works!</p>
+<section>
+    <div class="container">
+        <p>Ajouter un.e absent.e</p>
+        <select name="apprenants" id="apprenants">
+            <option value="">Sélectionner une personne</option>
+            <option value="Anne">Anne</option>
+            <option value="Assa">Assa</option>
+            <option value="Christelle">Christelle</option>
+            <option value="Clara">Clara</option>
+            <option value="Cynthia">Cynthia</option>
+            <option value="Diambéré">Diambéré</option>
+            <option value="Erdal">Erdal</option>
+            <option value="Fahd">Fahd</option>
+            <option value="Fama">Fama</option>
+            <option value="Hazar">Hazar</option>
+            <option value="Jérôme">Jérôme</option>
+            <option value="Jiyun">Jiyun</option>
+            <option value="Julie">Julie</option>
+            <option value="Kanzia">Kanzia</option>
+            <option value="Katia">Katia</option>
+            <option value="Lilianna">Lilianna</option>
+            <option value="Morgane">Morgane</option>
+            <option value="Thomas">Thomas</option>
+        </select>
+        <button>Ajouter</button>
+    </div>
+</section>
