ELABORATION DISPLAY LISTE DES ABSENT.E.S - ATTENTE LOGIQUE

--- a/src/app/components/display-absence-gender-lists/display-absence-gender-lists.component.html
+++ b/src/app/components/display-absence-gender-lists/display-absence-gender-lists.component.html
@@ -1,1 +1,6 @@
-<p>display-absence-gender-lists works!</p>
+<section>
+    <div class="container">
+        <p>Liste des absents</p>
+        <p>Liste des absentes</p>
+    </div>
+</section>
