--- a/src/app/components/header-menu/header-menu.component.html
+++ b/src/app/components/header-menu/header-menu.component.html
@@ -2,7 +2,7 @@
     <nav class="navbar">
         <ul class="list__menu">
             <li><a routerLink="/">Tirage au sort</a></li>
-            <li><a routerLink="/absence">Absent.e.s</a></li>
+            <li><a routerLink="/absences">Absent.e.s</a></li>
         </ul>
     </nav>
 </header>
