--- a/src/app/pages/absence/absence.component.html
+++ b/src/app/pages/absence/absence.component.html
@@ -1,1 +1,5 @@
-<app-absence-selection-list></app-absence-selection-list>
+<section>
+    <app-absence-selection-list class="selection"></app-absence-selection-list>
+    <app-display-absence-gender-lists class="displaylists"></app-display-absence-gender-lists>
+</section>
+
