--- a/src/app/components/absence-selection-list/absence-selection-list.component.css
+++ b/src/app/components/absence-selection-list/absence-selection-list.component.css
@@ -2,6 +2,7 @@ section {
     display: flex;
     height: 800px;
     align-items: center;
+    width: 50vw;
 }
 
 .container {
@@ -25,6 +26,9 @@ p {
 select {
   font-size: 1.2em;
   margin-bottom: 34px;
+  border: none;
+  border-radius: 15px;
+  border-right: 16px solid transparent
 }
 
 button {
