--- a/src/app/components/display-selected-learner/display-selected-learner.component.html
+++ b/src/app/components/display-selected-learner/display-selected-learner.component.html
@@ -1,6 +1,11 @@
 <section>
-    <div>
-        <p>Personne n'a été sélectionner actuellement</p>
+    <div class="container">
+        <div class="button">
+            <button (click)="displayNumber()">Sélectionner une personne</button>
+        </div>
+        <div class="display">
+            <p>Personne n'a été sélectionner actuellement</p>
+        </div>
     </div>
 </section>
 
