--- a/src/app/components/display-selected-learner/display-selected-learner.component.html
+++ b/src/app/components/display-selected-learner/display-selected-learner.component.html
@@ -1,7 +1,7 @@
 <section>
     <div class="container">
         <div class="button">
-            <button (click)="displayNumber()">Sélectionner une personne</button>
+            <button (click)="displayByNumber()">Sélectionner une personne</button>
         </div>
         <div class="display" [ngSwitch]="text">
             <p *ngSwitchCase="0" (click)="text = 0">Personne n'a été sélectionner actuellement</p>
@@ -16,7 +16,7 @@
             <p *ngSwitchCase="9" (click)="text = 9"><strong>Fahed</strong>, tu es le grand gagnant ! ✨</p>
             <p *ngSwitchCase="10" (click)="text = 10"><strong>Fama</strong>, tu es la grande gagnante ! ✨</p>
             <p *ngSwitchCase="11" (click)="text = 11"><strong>Hazar</strong>, tu es la grande gagnante ! ✨</p>
-            <p *ngSwitchCase="12"(click)="text = 12"><strong>Jérôme</strong>, tu es la grand gagnant ! ✨</p>
+            <p *ngSwitchCase="12" (click)="text = 12"><strong>Jérôme</strong>, tu es la grand gagnant ! ✨</p>
             <p *ngSwitchCase="13" (click)="text = 13"><strong>Jiyun</strong>, tu es la grande gagnante ! ✨</p>
             <p *ngSwitchCase="14" (click)="text = 14"><strong>Julie</strong>, tu es la grande gagnante ! ✨</p>
             <p *ngSwitchCase="15" (click)="text = 15"><strong>Kanzia</strong>, tu es la grande gagnante ! ✨</p>
@@ -25,6 +25,7 @@
             <p *ngSwitchCase="18" (click)="text = 18"><strong>Morgane</strong>, tu es la grande gagnante ! ✨</p>
             <p *ngSwitchCase="19" (click)="text = 19"><strong>Thomas</strong>, tu es le grand gagnant ! ✨</p>
             <p *ngSwitchCase="20" (click)="text = 20">👑 <strong>Tous les apprenant.e.s ont été tiré.e.s au sort !</strong> 🏆</p>
+            <p *ngSwitchCase="21" (click)="text = 21">👑 <strong>absent.e aujourd'hui</strong> 🏆</p>
         </div>
     </div>
 </section>
