--- a/src/app/components/display-selected-learner/display-selected-learner.component.html
+++ b/src/app/components/display-selected-learner/display-selected-learner.component.html
@@ -24,7 +24,7 @@
             <p *ngSwitchCase="17" (click)="text = 17"><strong>Lilianna</strong>, tu es la grande gagnante ! ✨</p>
             <p *ngSwitchCase="18" (click)="text = 18"><strong>Morgane</strong>, tu es la grande gagnante ! ✨</p>
             <p *ngSwitchCase="19" (click)="text = 19"><strong>Thomas</strong>, tu es le grand gagnant ! ✨</p>
-            <p *ngSwitchCase="20" (click)="text = 20">👑 <strong>Tous les apprenant.e.s ont été tiré.e.s au sort !</strong> 🏆</p>
+            <p *ngSwitchCase="20" (click)="text = 20">👑 <strong>Prêt.e à tirer au sort tes apprenants ? Clique pour lancer le tirage !</strong> 🏆</p>
             <p *ngSwitchCase="21" (click)="text = 21">👑 <strong>absent.e aujourd'hui</strong> 🏆</p>
         </div>
     </div>
