--- a/src/app/components/display-absence-gender-lists/display-absence-gender-lists.component.html
+++ b/src/app/components/display-absence-gender-lists/display-absence-gender-lists.component.html
@@ -1,6 +1,20 @@
 <section>
-    <div class="container">
-        <p>Liste des absents</p>
-        <p>Liste des absentes</p>
+  <div class="container">
+    <div>
+      <p>Liste des absents</p>
+        <ul>
+            <li>
+              <p>Example <button (click)="deleteAbsent()">X</button></p>
+            </li>
+        </ul>
     </div>
+    <div>
+      <p>Liste des absentes</p>
+      <ul>
+        <li>
+          <p>Example <button (click)="deleteAbsent()">X</button></p>
+        </li>
+      </ul>
+    </div>
+  </div>
 </section>
