--- a/src/app/components/absence-selection-list/absence-selection-list.component.html
+++ b/src/app/components/absence-selection-list/absence-selection-list.component.html
@@ -3,24 +3,8 @@
         <p>Ajouter un.e absent.e</p>
         <select name="apprenants" id="apprenants" (change)="onChangeEvent($event)">
             <option value="">Sélectionner une personne</option>
-            <option value="Anne">Anne</option>
-            <option value="Assa">Assa</option>
-            <option value="Christelle">Christelle</option>
-            <option value="Clara">Clara</option>
-            <option value="Cynthia">Cynthia</option>
-            <option value="Diambéré">Diambéré</option>
-            <option value="Erdal">Erdal</option>
-            <option value="Fahed">Fahd</option>
-            <option value="Fama">Fama</option>
-            <option value="Hazar">Hazar</option>
-            <option value="Jérôme">Jérôme</option>
-            <option value="Jiyun">Jiyun</option>
-            <option value="Julie">Julie</option>
-            <option value="Kanzia">Kanzia</option>
-            <option value="Katia">Katia</option>
-            <option value="Lilianna">Lilianna</option>
-            <option value="Morgane">Morgane</option>
-            <option value="Thomas">Thomas</option>
+            <!-- Je boucle sur mon learner.mock.ts pour alimenter la liste -->
+            <option value="{{learners.firstname}}" *ngFor="let learners of learnerMock">{{learners.firstname}}</option>
         </select>
         <button type="button" (click)="sendForListing()">Ajouter</button>
     </form>
