COMMUNICATION ENTRE SERVICE ET COMPONENTS OK - APPRENANT SELECTIONNE EST RENDU DANS LA LSITE DE DROITE RESTE A CREER UNE METHODE DE SUPPRESSION ET FAIRE LA DISTINCTION DE GENRE

--- a/src/app/components/absence-selection-list/absence-selection-list.component.html
+++ b/src/app/components/absence-selection-list/absence-selection-list.component.html
@@ -3,9 +3,8 @@
         <p>Ajouter un.e absent.e</p>
         <select name="apprenants" id="apprenants" (change)="onChangeEvent($event)">
             <option value="">Sélectionner une personne</option>
-            <!-- Je boucle sur mon learner.mock.ts pour alimenter la liste -->
             <option value="{{learners.firstname}}" *ngFor="let learners of learnerMock">{{learners.firstname}}</option>
         </select>
-        <button type="button" (click)="sendForListing()">Ajouter</button>
+        <button type="submit" (click)="onSubmit()">Ajouter</button>
     </form>
 </section>
