--- a/src/app/components/display-absence-gender-lists/display-absence-gender-lists.component.html
+++ b/src/app/components/display-absence-gender-lists/display-absence-gender-lists.component.html
@@ -3,16 +3,16 @@
     <div>
       <p>Liste des absents</p>
         <ul>
-            <li>
-              <p>Example <button (click)="deleteAbsent()">X</button></p>
+            <li *ngFor="let absent of data.absents">
+              <p>{{absent}}<button (click)="deleteAbsent()">X</button></p>
             </li>
         </ul>
     </div>
     <div>
       <p>Liste des absentes</p>
       <ul>
-        <li>
-          <p>Example <button (click)="deleteAbsent()">X</button></p>
+        <li *ngFor="let absent of data.absents">
+          <p>{{absent}}<button (click)="deleteAbsent()">X</button></p>
         </li>
       </ul>
     </div>
